--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "private": true,
-  "homepage": "https://borusevych.github.io/test/",
+  "homepage": "https://borusevych.github.io/euphoria.v.b./",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
